--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.25.0
-pandas==1.5.3
-seaborn==0.12.2
-matplotlib==3.7.1
-plotly==5.15.0
+streamlit
+pandas
+seaborn
+matplotlib
+plotly
+
